Fix responsiveness on mobile

--- a/webroot/scss/partials/_modals.scss
+++ b/webroot/scss/partials/_modals.scss
@@ -3,7 +3,8 @@
 
 #add_setup_modal, #edit_setup_modal, #edit_setup_manual_modal,#edit_profile_modal, #embed_twitch_modal, #edit_user_admin, #embed_website_script{
 	color: #000;
-	overflow:auto;
+	overflow-y: auto;
+	overflow-x: hidden;
 	background:#fff;
 	padding: 20px 20px 0 20px;
 	width:600px;
@@ -72,6 +73,7 @@
 .slim-round{
 	border-radius: 6px;
 	margin: .5em;
+	max-width: calc(100vw - 40px - 1em);
 }
 
 .add-form .input.file, .edit-form .input.file{
@@ -165,6 +167,7 @@
 	background: #fff;
 	border-top: 1px solid #D5D5D5;
 	border-radius: 0 0 6px 6px;
+	z-index: 20;
 }
 
 .modal-footer .button{
